--- a/package.json
+++ b/package.json
@@ -1,10 +1,32 @@
 {
   "name": "cognotate",
+  "private": true,
   "type": "module",
+  "scripts": {
+    "prepare": "husky"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/*",
+      "apps/*"
+    ],
+    "catalog": {},
+    "catalogs": {
+      "types": {
+        "@types/bun": "latest",
+        "typescript": "^5"
+      }
+    }
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@types/bun": "catalog:types",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.8.1"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "catalog:types"
   }
 }
