feat(llm): add ai and zod dependencies with catalog management

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
       "packages/*",
       "apps/*"
     ],
-    "catalog": {},
+    "catalog": {
+      "zod": "^4.3.6"
+    },
     "catalogs": {
       "types": {
         "@types/bun": "latest",
