--- a/packages/llm/package.json
+++ b/packages/llm/package.json
@@ -12,5 +12,10 @@
   },
   "peerDependencies": {
     "typescript": "catalog:types"
+  },
+  "dependencies": {
+    "@ai-sdk/deepseek": "^2.0.15",
+    "ai": "^6.0.64",
+    "zod": "catalog:"
   }
 }
